# dps_sim

./: .gitignore  README.md  instructions.md
.github/workflows/: server-tests.yml
doc/: Принцип работы устройста.md  Схема подключения.drawio
src/client/: index.html
src/mcu/: .gitignore  CMakeLists.txt  README.md  main.c  square_4ch.pio  w5100s_port.c  w5100s_port.h
src/mcu/examples/: CH9120_Test.h  CMakeLists.txt  RP2040_ETH_CH9120_test.c
src/mcu/lib/CH9120/: CMakeLists.txt
src/server/: README.md  server.py
src/server/tests/: conftest.py  test_server.py
